# goit-pythonweb-hw-08

./: .env  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: e0d6c45bbe61_init.py
src/conf/: config.py  constants.py  messages.py
src/entity/: models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contacts.py
src/services/: contacts.py
